fix(css): add alternative fonts for ❌ (as not supported in all, so otherwise not showing properly)

--- a/assets/webex.css
+++ b/assets/webex.css
@@ -66,6 +66,7 @@ input.webex-solveme.webex-correct,
 .webex-incorrect span::before,
 .webex-incorrect + .webex-icon::after {
   content: "\274C  ";
+  font-family: Arial, sans-serif;
 }
 
 .webex-correct span::before,
